--- a/RivaTuner/Profiles/Config
+++ b/RivaTuner/Profiles/Config
@@ -1,67 +1,67 @@
 [FnOffsetCache64]
-DDRAW.DLL=00098000 658ACD34
-IDirectDrawSurface7::Flip=00039120
-D3D9.DLL=001A5C30 A0B902C4
-IDirect3DDevice9::Present=000BC200
-IDirect3DDevice9::Release=00033490
-IDirect3DDevice9::Reset=000BC6B0
-IDirect3DSwapChain9::Present=0000BED0
-IDirect3DDevice9Ex::PresentEx=000BC2A0
-IDirect3DDevice9Ex::ResetEx=000BC7B0
-DXGI.DLL=000F4378 337B66B8
-IDXGISwapChain::Present=000014D0
-IDXGISwapChain::SetFullscreenState=000286D0
-IDXGISwapChain::ResizeBuffers=00027B10
-IDXGISwapChain::Release=00005540
-IDXGISwapChain1::Present1=00001640
-IDXGIFactory::CreateSwapChain=0006AA70
-IDXGIFactory2::CreateSwapChainForHwnd=0006B190
-IDXGIFactory2::CreateSwapChainForCoreWindow=0006AFC0
-D3D12Core.DLL=00202928 E231F3F5
-ID3D12CommandQueue::ExecuteCommandLists=000CABC0
-IDXGISwapChain3::ResizeBuffers1=00076A80
-kernel32.dll=000BFC30 2B51CDC1
-LoadLibraryA=0001F500
-LoadLibraryW=0001E880
+DDRAW.DLL=00099000 A6F57145
+IDirectDrawSurface7::Flip=00039C60
+D3D9.DLL=001A8098 D303EFA2
+IDirect3DDevice9::Present=000482B0
+IDirect3DDevice9::Release=0002CFD0
+IDirect3DDevice9::Reset=000BC570
+IDirect3DSwapChain9::Present=0000C2B0
+IDirect3DDevice9Ex::PresentEx=00048350
+IDirect3DDevice9Ex::ResetEx=000BC670
+DXGI.DLL=000F8820 BAD94A9B 02
+IDXGISwapChain::Present=00033D60
+IDXGISwapChain::SetFullscreenState=00024370
+IDXGISwapChain::ResizeBuffers=00023D10
+IDXGISwapChain::Release=000015F0
+IDXGISwapChain1::Present1=00002B70
+IDXGIFactory::CreateSwapChain=00067D50
+IDXGIFactory2::CreateSwapChainForHwnd=00068610
+IDXGIFactory2::CreateSwapChainForCoreWindow=00068440
+D3D12Core.DLL=001FFCB8 456071AF
+ID3D12CommandQueue::ExecuteCommandLists=000B4C50
+IDXGISwapChain3::ResizeBuffers1=00074B30
+kernel32.dll=000C50F0 4B198903 02
+LoadLibraryA=00018FE0
+LoadLibraryW=00018900
 Version=00000009
 [FnOffsetCache]
-DDRAW.DLL=00083600 1DD02EEF
-IDirectDrawSurface7::Flip=00036C60
-D3D8.DLL=000B0400 8D451A10
-IDirect3DDevice8::Present=0002AA00
-IDirect3DDevice8::Release=00029F00
-IDirect3DDevice8::Reset=0002A5E0
-D3D9.DLL=0016D0D8 981C3F9F
-IDirect3DDevice9::Present=000DB600
-IDirect3DDevice9::Release=0005B600
-IDirect3DDevice9::Reset=000DBA00
-IDirect3DSwapChain9::Present=00041650
-IDirect3DDevice9Ex::PresentEx=000DB690
-IDirect3DDevice9Ex::ResetEx=000DBB00
-DXGI.DLL=000C9C18 A7B12794
-IDXGISwapChain::Present=0007C6E0
-IDXGISwapChain::SetFullscreenState=00031E20
-IDXGISwapChain::ResizeBuffers=0001C860
-IDXGISwapChain::Release=00072F70
-IDXGISwapChain1::Present1=0007C590
-IDXGIFactory::CreateSwapChain=00070340
-IDXGIFactory2::CreateSwapChainForHwnd=00070B50
-IDXGIFactory2::CreateSwapChainForCoreWindow=000709D0
-D3D12Core.DLL=001903F0 30D4BDDD
-ID3D12CommandQueue::ExecuteCommandLists=000D9280
-IDXGISwapChain3::ResizeBuffers1=0007DDE0
-kernel32.dll=0009D750 2D508812
-LoadLibraryA=000224A0
-LoadLibraryW=000197D0
+DDRAW.DLL=00082C00 943F9A27
+IDirectDrawSurface7::Flip=00037390
+D3D8.DLL=000B0A00 FBDC074D
+IDirect3DDevice8::Present=0002A420
+IDirect3DDevice8::Release=00029A40
+IDirect3DDevice8::Reset=0002A000
+D3D9.DLL=0016D8F0 35215079
+IDirect3DDevice9::Present=000DB560
+IDirect3DDevice9::Release=000626B0
+IDirect3DDevice9::Reset=000DB960
+IDirect3DSwapChain9::Present=00041930
+IDirect3DDevice9Ex::PresentEx=000DB5F0
+IDirect3DDevice9Ex::ResetEx=000DBA60
+DXGI.DLL=000C7FF0 2C72AD3D 02
+IDXGISwapChain::Present=0007BB60
+IDXGISwapChain::SetFullscreenState=00020AD0
+IDXGISwapChain::ResizeBuffers=0001FC00
+IDXGISwapChain::Release=000447B0
+IDXGISwapChain1::Present1=00040040
+IDXGIFactory::CreateSwapChain=00072510
+IDXGIFactory2::CreateSwapChainForHwnd=00072BE0
+IDXGIFactory2::CreateSwapChainForCoreWindow=00072A60
+D3D12Core.DLL=001A9148 8215581E
+ID3D12CommandQueue::ExecuteCommandLists=000DEC80
+IDXGISwapChain3::ResizeBuffers1=0007D160
+kernel32.dll=000A4C70 8C8693BE 02
+LoadLibraryA=000303E0
+LoadLibraryW=0001D780
 Version=00000009
 [Settings]
-LastUpdateCheck=6182AA79h
+LastUpdateCheck=63077560h
 Skin=default.usf
 WindowX=262
-WindowY=1464
+WindowY=672
 FirstRun=0
 StartMinimized=1
-StartWithWindows=0
+StartWithWindows=1
 ShowTooltips=1
 EnableEncoderServer=1
 Enable64Bit=1
@@ -72,6 +72,10 @@ Language=
 LayeredWindowMode=1
 LayeredWindowAlpha=244
 ScaleFactor=100
+PreviewWindowX=1130
+PreviewWindowY=1063
+PreviewWindowW=476
+PreviewWindowH=329
 [Shared]
 Flags=00000001
 [Plugins]
